# PARLOR

./: .gitignore  Cargo.toml  PRODUCT_PLAN.md  README.md
.claude/skills/parlor-pulse/: SKILL.md
.claude/skills/parlor-research/: SKILL.md
.claude/skills/parlor-wave/: SKILL.md
context/waves/: PHASES.md
context/waves/2026-06-chess-kernel/: WAVE.md
context/waves/2026-06-chess-kernel/pulses/: pulse-01.md
crates/parlor-backgammon/: Cargo.toml
crates/parlor-backgammon/src/: lib.rs
crates/parlor-checkers/: Cargo.toml
crates/parlor-checkers/src/: lib.rs
crates/parlor-chess/: Cargo.toml
crates/parlor-chess/src/: lib.rs
crates/parlor-cli/: Cargo.toml
crates/parlor-cli/src/: main.rs
crates/parlor-core/: Cargo.toml
crates/parlor-core/src/: lib.rs
crates/parlor-go/: Cargo.toml
crates/parlor-go/src/: lib.rs
